@startuml

title __Z_EXERCISE's Class Diagram__\n

  namespace com.ion.training.oops.coupling {
    namespace z_exercise {
      class com.ion.training.oops.coupling.z_exercise.Bike {
          + move()
      }
    }
  }
  

  namespace com.ion.training.oops.coupling {
    namespace z_exercise {
      class com.ion.training.oops.coupling.z_exercise.Car {
          + move()
      }
    }
  }
  

  namespace com.ion.training.oops.coupling {
    namespace z_exercise {
      class com.ion.training.oops.coupling.z_exercise.Cart {
          - items : LineItem[]
          + getTotalPrice()
      }
    }
  }
  

  namespace com.ion.training.oops.coupling {
    namespace z_exercise {
      class com.ion.training.oops.coupling.z_exercise.GoodTraveler {
          + getV()
          + setV()
          + startJourney()
      }
    }
  }
  

  namespace com.ion.training.oops.coupling {
    namespace z_exercise {
      class com.ion.training.oops.coupling.z_exercise.LineItem {
          - price : float
          - quantity : int
          + getTotalPrice()
      }
    }
  }
  

  namespace com.ion.training.oops.coupling {
    namespace z_exercise {
      class com.ion.training.oops.coupling.z_exercise.LooseCouplingTraveler {
          {static} + main()
      }
    }
  }
  

  namespace com.ion.training.oops.coupling {
    namespace z_exercise {
      class com.ion.training.oops.coupling.z_exercise.Order {
          - salesTax : float
          + Order()
          + totalPrice()
      }
    }
  }
  

  namespace com.ion.training.oops.coupling {
    namespace z_exercise {
      interface com.ion.training.oops.coupling.z_exercise.Vehicle {
          {abstract} + move()
      }
    }
  }
  

  com.ion.training.oops.coupling.z_exercise.Bike .up.|> com.ion.training.oops.coupling.z_exercise.Vehicle
  com.ion.training.oops.coupling.z_exercise.Car .up.|> com.ion.training.oops.coupling.z_exercise.Vehicle
  com.ion.training.oops.coupling.z_exercise.GoodTraveler o-- com.ion.training.oops.coupling.z_exercise.Vehicle : v
  com.ion.training.oops.coupling.z_exercise.Order o-- com.ion.training.oops.coupling.z_exercise.Cart : cart


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
